Fix sticky footer on IE

--- a/_sass/_2rules.scss
+++ b/_sass/_2rules.scss
@@ -130,7 +130,7 @@
  */
 
 .content {
-  flex: 1;
+  flex-grow: 1;
 }
 
 .page,
